--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="SwU-t3-jw1" id="J5X-bF-9wM"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="wgM-YD-RfR"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="wgM-YD-RfR">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="SCm-jP-xuU">
+                            <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="SwU-t3-jw1" id="sIC-tg-42l"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yfd-cL-z6T" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
